Fix google maps overflow from removed css. Fix navbar not collapse correctly. Fix Header overflow on mobile version.

--- a/SpanishAcademy/Content/css/creative.css
+++ b/SpanishAcademy/Content/css/creative.css
@@ -115,6 +115,7 @@ body {
         text-transform: uppercase;
         color: #c60b1e;
         font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+        display:none;
     }
 
         #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
@@ -154,6 +155,7 @@ body {
         #mainNav .navbar-brand {
             color: #c60b1e;
             text-shadow: 1px 1px 0px #ffc400;
+            display:block;
         }
 
             #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
@@ -402,3 +404,17 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+.google-maps {
+        position: relative;
+        padding-bottom: 75%; // This is the aspect ratio
+        height: 0;
+        overflow: hidden;
+    }
+    .google-maps iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100% !important;
+        height: 100% !important;
+    }
